--- a/2.0/index1.html
+++ b/2.0/index1.html
@@ -51,7 +51,7 @@
     <button onmousedown="sound1.play()" class="btn btn2">@#banned</button>
     <script>
      var sound1 = new Audio();
-     sound1.src ="sound1.wav";
+     sound1.src ="sound.wav";
      </script>
 
   </div>
