--- a/2.0/index1.html
+++ b/2.0/index1.html
@@ -43,11 +43,11 @@
 
          
   <div>
-    <button onmousedown="sound1.play()" class="btn btn1">Kelas 11</button>
-    <button onmousedown="sound1.play()" onmousedown="sound1.play()"class="btn btn2">Kelas 11</button>
+    <button onmousedown="sound1.play()" class="btn btn1">Kelas 12</button>
+    <button onmousedown="sound1.play()" class="btn btn2">Kelas 12</button>
     <button onmousedown="sound1.play()" class="btn btn2">@#error</button>
-    <button onmousedown="sound1.play()" class="btn btn2">@#dkdksoskdnxn</button>
-    <button class="btn btn2" onclick="window.location.href='K11/index.html'">1*?1@%</button>
+    <button onmousedown="sound1.play()" class="btn btn2"></button>
+    <button class="btn btn2" onclick="window.location.href='K12/index.html'">fix</button>
     <button onmousedown="sound1.play()" class="btn btn2">@#banned</button>
     <script>
      var sound1 = new Audio();
