--- a/2.0/index1.html
+++ b/2.0/index1.html
@@ -43,12 +43,12 @@
 
          
   <div>
-    <button onmousedown="sound1.play()" class="btn btn1">Kelas 12</button>
+    <button onmousedown="sound1.play()" class="btn btn1">tutor ff semanggi</button>
     <button onmousedown="sound1.play()" class="btn btn2">Kelas 12</button>
     <button onmousedown="sound1.play()" class="btn btn2">@#error</button>
     <button onmousedown="sound1.play()" class="btn btn2"></button>
     <button class="btn btn2" onclick="window.location.href='K12/index.html'">fix</button>
-    <button onmousedown="sound1.play()" class="btn btn2">@#banned</button>
+    <button onmousedown="sound1.play()" class="btn btn2">about</button>
     <script>
      var sound1 = new Audio();
      sound1.src ="sound.wav";
