--- a/2.0/priv.html
+++ b/2.0/priv.html
@@ -46,6 +46,7 @@
   <div>
     <button class="btn btn1" onclick="window.location.href='K10/index.html'">Kelas 10</button>
     <button class="btn btn2" onclick="window.location.href='K11/index.html'">Kelas 11</button>
+    <button class="btn btn2" onclick="window.location.href='K12/index.html'">Kelas 12</button>
     
   </div>
 
