--- a/2.0/index2.html
+++ b/2.0/index2.html
@@ -43,13 +43,10 @@
 
          
   <div>
-    <button onmousedown="sound1.play()" class="btn btn1">Tutor Epep</button>
-    <button onmousedown="sound1.play()" class="btn btn2">Kelas 11</button>
-    <button onmousedown="sound1.play()" class="btn btn2">Kelas 12</button>
-    <button onmousedown="sound1.play()" class="btn btn2">About</button>
-    <button class="btn btn2" onclick="window.location.href='K11/index.html'">1*?1@%</button>
-    <button onmousedown="sound1.play()" class="btn btn2">shej</button>
-    <button onmousedown="sound1.play()" class="btn btn2" onclick="window.location.href='K11/index.html'">1*?1@%</button>
+    <button class="btn btn1" onclick="window.location.href='K10/index.html'">Kelas 10</button>
+    <button class="btn btn2" onclick="window.location.href='K11/index.html'">Kelas 11</button>
+    <button class="btn btn2" onclick="window.location.href='K12/index.html'">Kelas 12</button>
+    <button onmousedown="sound1.play()" class="btn btn1">Error</button>
     <script>
      var sound1 = new Audio();
      sound1.src ="sound0.wav";
