--- a/2.0/s.html
+++ b/2.0/s.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Verification</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deteksi Perangkat</title>
+    <script>
+        window.onload = function() {
+            var userAgent = navigator.userAgent;
+            
+            if (userAgent.match(/iPad/i) || userAgent.match(/iPhone/i)) {
+                // Perangkat iOS
+                var tokenForm = '<h2>Aktivasi</h2>' +
+                                '<p>Masukkan Password ke kolom untuk dapat login</p>' +
+                                '<form id="loginForm">' +
+                                '<label for="token">Password:</label><br>' +
+                                '<input type="text" id="token" name="token"><br>' +
+                                '<button type="button" onclick="verifyToken()">Login</button>' +
+                                '</form>' +
+                                '<p id="errorMessage" style="color: red; display: none;">Token tidak valid</p>';
+
+                document.getElementById('content').innerHTML = tokenForm;
+            } else {
+                // Perangkat selain iOS
+                document.getElementById('content').innerHTML = "Maaf, akses hanya diperbolehkan untuk iOS.";
+            }
+        };
+
+        function verifyToken() {
+            var tokenHex = document.getElementById("token").value.trim();
+
+            var tokenDec;
+            try {
+                tokenDec = parseInt(tokenHex, 16);
+            } catch (error) {
+                displayErrorMessage(true);
+                return;
+            }
+
+            var currentDate = new Date();
+            var formattedDateTime = currentDate.getDate() + 
+                                    ('0' + (currentDate.getMonth() + 1)).slice(-2) +
+                                    currentDate.getFullYear() +
+                                    ('0' + currentDate.getHours()).slice(-2);
+
+            var expectedTokenDec = parseInt(formattedDateTime);
+            if (tokenDec === expectedTokenDec) {
+                window.location.href = "priv.html";
+            } else {
+                displayErrorMessage(true);
+            }
+        }
+
+        function displayErrorMessage(show) {
+            var errorMessageElement = document.getElementById("errorMessage");
+            errorMessageElement.style.display = show ? "block" : "none";
+        }
+    </script>
 </head>
 <body>
-
-<h2>Aktivasi</h2>
-<!-- Menambahkan teks instruksi di bawah tombol login -->
-<p>Masukkan Password ke kolom untuk dapat login</p>
-<form id="loginForm">
-  <label for="token">Password:</label><br>
-  <input type="text" id="token" name="token"><br>
-  <!-- Ketika tombol "Login" ditekan, fungsi verifyToken() dipanggil -->
-  <button type="button" onclick="verifyToken()">Login</button>
-</form>
-
-<p id="errorMessage" style="color: red; display: none;">Token tidak valid</p>
-
-<script>
-function verifyToken() {
-  // Mendapatkan token dari input
-  var tokenHex = document.getElementById("token").value.trim();
-
-  // Mengubah token dari HEX ke DEC
-  var tokenDec;
-  try {
-    tokenDec = parseInt(tokenHex, 16);
-  } catch (error) {
-    // Menampilkan pesan kesalahan jika token tidak valid
-    displayErrorMessage(true);
-    return;
-  }
-
-  // Mendapatkan tanggal dan jam saat ini
-  var currentDate = new Date();
-  // Menggabungkan tanggal dan jam saat ini menjadi satu string dengan format "ddMMyyyyHH"
-  var formattedDateTime = currentDate.getDate() + 
-                          ('0' + (currentDate.getMonth() + 1)).slice(-2) +
-                          currentDate.getFullYear() +
-                          ('0' + currentDate.getHours()).slice(-2);
-
-  // Memeriksa apakah token DEC sesuai dengan tanggal dan jam saat ini
-  var expectedTokenDec = parseInt(formattedDateTime);
-  if (tokenDec === expectedTokenDec) {
-    // Jika token DEC valid, arahkan pengguna ke halaman kedua dengan link
-    window.location.href = "priv.html";
-  } else {
-    // Jika token DEC tidak valid, tampilkan pesan kesalahan
-    displayErrorMessage(true);
-  }
-}
-
-function displayErrorMessage(show) {
-  var errorMessageElement = document.getElementById("errorMessage");
-  errorMessageElement.style.display = show ? "block" : "none";
-}
-</script>
-
+    <div id="content"></div>
 </body>
 </html>
